--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body { margin: 0;}
+
+* {
+  font-family: 'Lato', 'Arial', sans-serif;
+}
+
+a, a:hover, a:visited {
+  text-decoration: none;
+}
+
+.text-centered {
+  text-align: center !important;
+}
