--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,11 +1,15 @@
-<app-header></app-header>
+<!--<app-header></app-header>-->
 
 <section class="background_image">
 
 </section>
 
 <section class="blue_background">
-
+  <div class="container">
+    <div class="column text-centered">
+<!--      <h1>Cześć, nazywam sie Kamil Jasek i jestem Fullstack Developerem</h1>-->
+    </div>
+  </div>
 </section>
 
 <section class="skills">
@@ -16,18 +20,21 @@
           <h1 class="text-centered">Front-end</h1>
           <div class="image text-centered" *ngFor="let skill of frontendSkills">
             <img class="skill-icon" [src]="skill.imageUrl" alt="skill"/>
+            <span class="skill-name">{{skill.skillName}}</span>
           </div>
         </div>
         <div class="column">
           <h1 class="text-centered">Back-end</h1>
           <div class="image text-centered" *ngFor="let skill of frontendSkills">
             <img class="skill-icon" [src]="skill.imageUrl" alt="skill"/>
+            <span class="skill-name">{{skill.skillName}}</span>
           </div>
         </div>
         <div class="column">
           <h1 class="text-centered">Narzędzia i inne</h1>
           <div class="image text-centered" *ngFor="let skill of frontendSkills">
             <img class="skill-icon" [src]="skill.imageUrl" alt="skill"/>
+            <span class="skill-name">{{skill.skillName}}</span>
           </div>
         </div>
       </div>
@@ -35,3 +42,6 @@
   </div>
 </section>
 
+<section class="blue_background">
+  <div class="container is_narrow"></div>
+</section>
