--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,1 +1,6 @@
-<nav class="navbar fixed-top">ppppp</nav>
+<nav class="fixed-top">
+  <div class="container py-3 mt-3 title">
+    <span class="title-name"><a [routerLink]="'/'">Kamil Jasek</a></span>
+    <p class="title-subtitle">Full Stack Developer</p>
+  </div>
+</nav>
