--- a/src/app/common/header/header.component.scss
+++ b/src/app/common/header/header.component.scss
@@ -1,8 +1,32 @@
 .fixed-top {
-  position: fixed;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 1030;
-  background-color: #7510F7;
+  z-index: 10;
 }
+
+.title {
+  padding: 10px 0 8px 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar-custom {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.title-name {
+  font-family: Hammersmith One, sans-serif;
+  font-size: 35px;
+  letter-spacing: 3px;
+  line-height: 1;
+}
+
+.title-name a {
+  color: #212529;
+  text-decoration: none;
+}
+
+.title-subtitle {
+  font-size: 20px;;
+  font-weight: 600;
+  letter-spacing: 3px;
+}
+
