--- a/src/app/home.component.scss
+++ b/src/app/home.component.scss
@@ -1,4 +1,4 @@
-.background_image {
+.background-image {
   background-image: url('../assets/img/background.jpg');
   background-attachment: fixed;
   background-size: cover;
@@ -6,7 +6,11 @@
   height: 100vh;
 }
 
-.blue_background {
+.oldlace-color {
+  color: oldlace;
+}
+
+.background-blue {
   background-color: #7510F7;
   height: 80vh; //TODO do usunięcia
 }
@@ -14,18 +18,6 @@
 .skills {
   margin-top: -14rem;
   padding: 5rem 1.5rem;
-}
-
-//@media screen and (min-width: 1024px) {
-//  .container {
-//    max-width: 960px;
-//  }
-//}
-
-.container {
-  max-width: 80vw;
-  margin: 0 auto;
-  position: relative;
 }
 
 .box {
@@ -60,5 +52,14 @@ img.skill-icon {
 }
 
 .skill-name {
+  font-family: Hammersmith One, sans-serif;
+  text-transform: uppercase;
+  font-size: 20px;
+  letter-spacing: 3px;
+  line-height: 1;
   display: block;
+}
+
+.max-height {
+  height: calc(100% - 5rem);
 }
