--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Hammersmith+One&display=swap');
 
-html, body { height: 100%; }
-
-body { margin: 0;}
-
-* {
-  font-family: 'Lato', 'Arial', sans-serif;
-}
-
-a, a:hover, a:visited {
+html, body {
+  height: 100%;
   text-decoration: none;
 }
 
-.text-centered {
-  text-align: center !important;
+body {
+  margin: 0;
+}
+
+* {
+  font-family: 'Lato', 'Arial', sans-serif;
+  text-decoration: none;
+}
+
+a, a:hover, a:visited, a:link, a:active {
+  text-decoration: none;
+  color: #212529;
 }
 
 .image img {
