--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
-
-<section class="background-image">
+<section id="home" class="background-image">
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <div class="col oldlace-color text-center">
@@ -12,7 +11,7 @@
   </div>
 </section>
 
-<section class="background-blue">
+<section id="omnie" class="background-blue">
   <div class="container max-height">
     <div class="row h-100 align-items-center">
       <div class="col oldlace-color text-center">
@@ -27,7 +26,7 @@
   </div>
 </section>
 
-<section class="skills">
+<section id="skills" class="skills">
   <div class="container">
     <div class="box">
       <div class="columns">
